feat: add simple action bar implementation

--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,10 @@ build/
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 
+
+example
+
+!example/example.dart
 # mine
 main.dart
 example/sample
